--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,48 @@
-
+absl-py==0.13.0
 alabaster==0.7.12
 appdirs==1.4.4
 argh==0.26.2
 arrow==0.13.1
 astor==0.8.1
+astroid==2.6.5
 async-generator==1.10
 atomicwrites==1.4.0
+attrs==21.2.0
+autopep8==1.5.4
+Babel==2.9.1
+backcall==0.2.0
+bcrypt==3.2.0
+binaryornot==0.4.4
 black==19.10b0
+bleach==3.3.1
 blinker==1.4
 brotlipy==0.7.0
-cached-property @ file:///tmp/build/80754af9/cached-property_1600785575025/work
-cachetools @ file:///tmp/build/80754af9/cachetools_1619597386817/work
+cached-property==1.5.2
+cachetools==4.2.2
 certifi==2021.5.30
-cffi @ file:///C:/ci/cffi_1625831764494/work
-chardet @ file:///C:/ci/chardet_1607706910910/work
+cffi==1.14.6
+chardet==4.0.0
 charset-normalizer==2.0.3
-click @ file:///home/linux1/recipes/ci/click_1610990599742/work
+click==7.1.2
 click-plugins==1.1.1
 cligj==0.7.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-cookiecutter @ file:///tmp/build/80754af9/cookiecutter_1617748928239/work
-coverage @ file:///C:/ci/coverage_1614614910274/work
-cryptography @ file:///C:/ci/cryptography_1616769432139/work
+cloudpickle==1.6.0
+colorama==0.4.4
+cookiecutter==1.7.2
+coverage==5.5
+cryptography==3.4.7
 cycler==0.10.0
-Cython @ file:///C:/ci/cython_1626257059178/work
-decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
+Cython==0.29.24
+decorator==5.0.9
+defusedxml==0.7.1
+diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==2.2.5
 django-appconf==1.0.4
 django-compressor==2.4.1
 django-compressor-toolkit==0.6.0
 django-heroku==0.3.1
-docutils @ file:///C:/ci/docutils_1620828194019/work
+docutils==0.17.1
 entrypoints==0.3
 ffmpeg==1.4
 Fiona==1.8.13.post1
@@ -43,155 +51,160 @@ future==0.18.2
 gast==0.2.2
 GDAL==3.0.2
 geopandas==0.6.1
-google-auth @ file:///tmp/build/80754af9/google-auth_1599595709135/work
-google-auth-oauthlib @ file:///tmp/build/80754af9/google-auth-oauthlib_1617120569401/work
+google-auth==1.21.1
+google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
-grpcio @ file:///C:/ci/grpcio_1614884419385/work
+grpcio==1.36.1
 gunicorn==20.1.0
-h5py @ file:///C:/ci/h5py_1622088627516/work
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-imagesize @ file:///home/ktietz/src/ci/imagesize_1611921604382/work
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877486026/work
+h5py==3.2.1
+idna==2.10
+imagesize==1.2.0
+importlib-metadata==3.10.0
 inflection==0.5.1
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
-ipykernel @ file:///C:/ci/ipykernel_1596208728219/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1617121109687/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-isort @ file:///tmp/build/80754af9/isort_1625834821980/work
-jedi @ file:///C:/ci/jedi_1606932641827/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-jinja2-time @ file:///tmp/build/80754af9/jinja2-time_1617751524098/work
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213516947/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
-keyring @ file:///C:/ci/keyring_1621524751168/work
-kiwisolver @ file:///C:/ci/kiwisolver_1612282618948/work
-lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529290879/work
-Markdown @ file:///C:/ci/markdown_1614364005059/work
-MarkupSafe @ file:///C:/ci/markupsafe_1594405949945/work
-matplotlib @ file:///C:/ci/matplotlib-suite_1613408055530/work
+intervaltree==3.1.0
+ipykernel==5.3.4
+ipython==7.22.0
+ipython-genutils==0.2.0
+isort==5.9.2
+jedi==0.17.2
+Jinja2==2.11.3
+jinja2-time==0.2.0
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keyring==23.0.1
+kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
+Markdown==3.3.4
+MarkupSafe==1.1.1
+matplotlib==3.3.4
 mccabe==0.6.1
-mistune @ file:///C:/ci/mistune_1594373272338/work
+mistune==0.8.4
 mkl-fft==1.3.0
 mkl-random==1.1.1
 mkl-service==2.3.0
 munch==2.5.0
 mypy-extensions==0.4.3
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1624479160228/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1596233945180/work
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
-oauthlib @ file:///tmp/build/80754af9/oauthlib_1623060228408/work
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+numpy==1.19.1
+numpydoc==1.1.0
+oauthlib==3.1.1
 olefile==0.46
 opencv-contrib-python==4.5.3.56
-opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work
-packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
-pandas @ file:///C:/ci/pandas_1613686255372/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605102427207/work
-paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
+opt-einsum==3.3.0
+packaging==21.0
+pandas==1.2.2
+pandocfilters==1.4.3
+paramiko==2.7.2
 parso==0.7.0
 pathspec==0.7.0
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///C:/ci/pillow_1594298234712/work
-pluggy @ file:///C:/ci/pluggy_1615976530170/work
-poyo @ file:///tmp/build/80754af9/poyo_1617751526755/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+pip==21.1.3
+pluggy==0.13.1
+poyo==0.5.0
+prompt-toolkit==3.0.17
 protobuf==3.17.2
-psutil @ file:///C:/ci/psutil_1612298033174/work
+psutil==5.8.0
 psycopg2==2.9.1
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1621600989141/work
+pycodestyle==2.6.0
+pycparser==2.20
+pydocstyle==6.1.1
 pydub==0.25.1
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
-PyJWT @ file:///C:/ci/pyjwt_1619651810943/work
-pylint @ file:///C:/ci/pylint_1627536899769/work
-pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
-pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1613849700860/work
-PyNaCl @ file:///C:/ci/pynacl_1595009241355/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyproj @ file:///C:/ci/pyproj_1614278152133/work
+pyflakes==2.2.0
+Pygments==2.9.0
+PyJWT==2.1.0
+pylint==2.9.6
+pyls-black==0.4.6
+pyls-spyder==0.3.2
+PyNaCl==1.4.0
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyproj==2.6.1.post1
 pyreadline==2.1
-pyrsistent @ file:///C:/ci/pyrsistent_1600123688363/work
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
-python-slugify @ file:///tmp/build/80754af9/python-slugify_1620405669636/work
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pyrsistent==0.17.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-jsonrpc-server==0.4.0
+python-language-server==0.36.2
+python-slugify==5.0.2
+pytz==2021.1
 pywin32==228
-pywin32-ctypes @ file:///C:/ci/pywin32-ctypes_1594392691209/work
+pywin32-ctypes==0.2.0
 PyYAML==5.4.1
 pyzmq==20.0.0
-QDarkStyle @ file:///tmp/build/80754af9/qdarkstyle_1617386714626/work
-qstylizer @ file:///tmp/build/80754af9/qstylizer_1617713584600/work/dist/qstylizer-0.1.10-py2.py3-none-any.whl
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1615991616277/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1623278325812/work
+QDarkStyle==3.0.2
+qstylizer==0.1.10
+QtAwesome==1.0.2
+qtconsole==5.1.0
 QtPy==1.9.0
 rcssmin==1.0.6
-regex @ file:///C:/ci/regex_1625610189850/work
+regex==2021.7.6
 requests==2.26.0
 requests-oauthlib==1.3.0
 rjsmin==1.1.0
-rope @ file:///tmp/build/80754af9/rope_1623703006312/work
-rsa @ file:///tmp/build/80754af9/rsa_1614366226499/work
-Rtree @ file:///C:/ci/rtree_1618421019532/work
-scikit-learn @ file:///C:/ci/scikit-learn_1598376983131/work
-scipy @ file:///C:/ci/scipy_1616703425152/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1608578541026/work
+rope==0.19.0
+rsa==4.7.2
+Rtree==0.9.7
+scikit-learn==0.23.2
+scipy==1.6.2
+seaborn==0.11.1
+setuptools==52.0.0.post20210125
 Shapely==1.7.1
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1623949099177/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1623884544367/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///tmp/build/80754af9/sphinxcontrib-serializinghtml_1624451540180/work
+six==1.16.0
+snowballstemmer==2.1.0
+sortedcontainers==2.4.0
+Sphinx==4.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 spotipy==2.18.0
-spyder @ file:///C:/ci/spyder_1626182175529/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1625671145829/work
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+spyder==5.0.5
+spyder-kernels==2.0.5
+sqlparse==0.4.1
 tensorboard==2.2.1
 tensorboard-plugin-wit==1.6.0
 tensorflow==2.1.0
 tensorflow-estimator==2.1.0
 termcolor==1.1.0
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+testpath==0.5.0
 text-unidecode==1.3
-textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
-threadpoolctl @ file:///tmp/build/80754af9/threadpoolctl_1626115094421/work
-three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
-tinycss @ file:///tmp/build/80754af9/tinycss_1617713798712/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tornado @ file:///C:/ci/tornado_1606935947090/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-typed-ast @ file:///C:/ci/typed-ast_1624953789477/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1624965014186/work
-ujson @ file:///C:/ci/ujson_1611244941645/work
-Unidecode @ file:///tmp/build/80754af9/unidecode_1614712377438/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
-watchdog @ file:///C:/ci/watchdog_1612471244702/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+textdistance==4.2.1
+threadpoolctl==2.2.0
+three-merge==0.1.1
+tinycss==0.4
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
+ujson==4.0.2
+Unidecode==1.2.0
+urllib3==1.26.6
+watchdog==1.0.2
+wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==0.16.1
-whichcraft @ file:///tmp/build/80754af9/whichcraft_1617751293875/work
+wheel==0.36.2
+whichcraft==0.6.1
 whitenoise==5.3.0
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306165655/work
+win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.12.1
 xgboost==1.4.2
+yapf==0.31.0
+zipp==3.5.0
